--- a/client/app/(components)/FeatureRow.module.css
+++ b/client/app/(components)/FeatureRow.module.css
@@ -27,11 +27,24 @@
   border-radius: 1.2rem;
 }
 
-.label {
+.locationInfo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   position: absolute;
   bottom: 2rem;
   left: 50%;
   transform: translate(-50%);
+  width: 100%;
+  justify-content: center;
+}
+
+.locationIcon {
+  height: 4rem;
+  width: 4rem;
+}
+
+.label {
   font-size: 1.8rem;
   display: flex;
   align-items: center;
@@ -39,7 +52,7 @@
 }
 
 .place {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 600;
   font-family: 'Playfair Display', serif;
 }
